--- a/styles/style.css
+++ b/styles/style.css
@@ -18,15 +18,15 @@ body {
 
 .container {
     width: 99vw;
-    height: 80px;
-    grid-template-columns: 0.3fr 0.8fr 0.3fr;
+    height: 100%;
+    grid-template-columns: 0.3fr 0.8fr 0.8fr 0.3fr;
     grid-template-rows: 100px 0.2fr 0.05fr 0.2fr 100px;
     grid-template-areas: 
-    "header header header"
-    "main main main"
-    "scroll scroll scroll"
-    ". section ."
-    "footer footer footer";
+    "header header header header"
+    "main main main main"
+    "scroll scroll scroll scroll"
+    ". section section ."
+    "footer footer footer footer";
 }
 
 /* HEADER */
@@ -84,7 +84,7 @@ header a {
 /* MAIN */
 main {
     width: 100%;
-    height: 75vh;
+    height: 100%;
     grid-area: main;
     align-items: center;
     justify-content: center;
@@ -113,6 +113,7 @@ h1 {
     padding-left: 2rem;
     border-radius: 8px;
     width: 115%;
+    height: 50%;
 }
 
 .fun-fact {
@@ -142,17 +143,17 @@ h1 {
     grid-area: scroll;
     align-items: center;
     justify-content: center;
-    font-size: 2rem;
+    font-size: 2rem;   
 }
-
 
 /* SECTION */
 section {
     width: 60vw;
     height: 65vh;
     grid-area: section;
-    justify-content: center;
-    align-items: center;
+    gta
+    /* justify-content: center;
+    align-items: center; */
     gap: 2rem;
 }
 
