--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 /* SMOOTH SCROLLING */
-* {
+/* * {
     scroll-behavior: smooth;
-}
+} */
 
 :root {
     font-size: 62.5%;
@@ -13,19 +13,35 @@ body {
     font-family: "Roboto", sans-serif;
 }
 
+h1 {
+    font-size: 4vw;
+}
+
+h2 {
+    font-size: 3vw;
+}
+
+h3 {
+    font-size: 2vw;
+}
+
+p {
+    font-size: 1vw;
+}
 
 /* WHOLE PAGE CONTAINER */
 
-.container {
+.container-1 {
+    display: grid;
     width: 99vw;
     height: 100%;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 100px 0.2fr 0.05fr 0.2fr 100px;
-    grid-template-areas: 
+    grid-template-rows: 100px 0.2fr 0.2fr 0.7fr 100px;
+    grid-template-areas:
     "header header header header"
     "main main main main"
-    "scroll scroll scroll scroll"
-    ". section section ."
+    "section section section section"
+    "section2 section2 section2 section2"
     "footer footer footer footer";
 }
 
@@ -34,65 +50,148 @@ header {
     width: 100%;
     height: 100%;
     grid-area: header;
-    justify-content: space-around;
     font-size: 1.5rem;
 }
 
 nav {
-    height: 80px;
-    width: 30vw;
-    justify-content: space-around;   
+    width: 100%;
+    margin-right: 10%;
 }
 
 nav ul {
     width: 100%;
     height: 100%;
-    align-items: center;
-    justify-content: space-around;
     gap: 20px;
 }
-nav li {
-    list-style-type: none;
-}
+
 nav ul li a {
     height: 100%;
     text-transform: uppercase;
     text-decoration: none;
     position: relative;
 }
-nav ul li a:after {
-    position: absolute;
-    content: "";
-    left:0;
-    bottom: -5px;
-    width: 0;
-    height: 25%;
-    background:#FFD35C;
-    opacity: 0.5;
-    transition: all .5s ease-in-out;
-  }
 
-nav ul li a:hover:after {
-    width: 100%;
-}
+/* DESKTOP ANIMATION */
 
-header a {
+
+/* MOBILE TABLET */
+
+.nav-link-style {
     color: #98AAC4;
     font-weight: 500;
 }
 
+
+.nav-link-style:hover {
+    color: #3737eb;
+    font-weight: 500;
+}
+
+.button-style {
+    border-color: transparent;
+    color: transparent;
+}
+
+/*  custom button */
+
+.clear-menu-btn {
+    position: relative;
+    width: 40px;
+    height: 40px;
+    margin: 0 auto;
+  }
+
+  .clear-menu-btn input[type="checkbox"] {
+    position: absolute;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+  }
+
+  .clear-menu-btn input[type="checkbox"]:hover { cursor: pointer; }
+
+  .clear-menu-btn input[type="checkbox"]:checked ~ .top, .clear-menu-btn input[type="checkbox"]:checked ~ .bottom { top: 40%; }
+
+  .clear-menu-btn input[type="checkbox"]:checked ~ .top {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+
+  .clear-menu-btn input[type="checkbox"]:checked ~ .bottom {
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+  }
+
+  .clear-menu-btn input[type="checkbox"]:checked ~ .middle {
+    filter: alpha(opacity=0);
+    opacity: 0;
+  }
+
+  .clear-menu-btn input[type="checkbox"]:checked ~ .circle {
+    filter: alpha(opacity=100);
+    opacity: 1;
+  }
+
+  .clear-menu-btn span {
+    position: absolute;
+    display: block;
+    width: 40px;
+    height: 5px;
+    background-color: #98aac4bc;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
+    z-index: -1;
+  }
+
+  .clear-menu-btn .top { top: 15%; }
+
+  .clear-menu-btn .middle { top: 50%; }
+
+  .clear-menu-btn .bottom { top: 85%; }
+
+  .clear-menu-btn .circle {
+    /* display: block;
+    position: absolute; */
+    /* top: 100%;
+    left: 100%; */
+    /* -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); */
+    /* filter: alpha(opacity=0);
+    opacity: 0; */
+    /* width: 0;
+    height: 0; */
+    background-color: transparent;
+    /* -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -ms-transition: all 0.5s;
+    -o-transition: all 0.5s;
+    transition: all 0.5s; */
+    /* z-index: -1; */
+  }
+
+
 /* MAIN */
 main {
-    width: 100%;
+    width: 80vw;
     height: 100%;
     grid-area: main;
     align-items: center;
     justify-content: center;
 }
 
-h1 {
-    font-size: 5rem;
-}
 
 /* ANIMATION TYPEWRITING */
 
@@ -128,18 +227,27 @@ h1 {
     }
 }
 
-/* END OF ANIMATION */
+/* PRESENTATION */
 
-.presentation p {
-    font-size: 3rem;
+
+.presentation {
+    position: relative;
+}
+
+.presentation-text {
+    margin-left: 20%;
+}
+.presentation-text h2 {
     padding-right: 2%;
-    color: #98aac4;
+    color: #3737eb;
 }
 
 .presentation a {
     color: black;
-    font-style: italic;
     font-weight: 400;
+}
+.presentation a:hover {
+    color:black ;
 }
 
 
@@ -147,43 +255,69 @@ h1 {
     background-color:#FFD35C;
     clip-path: polygon(25% 0%, 100% 0%, 100% 100%, 25% 100%, 0% 50%);
     padding-left: 2rem;
-    border-radius: 8px;
-    width: 115%;
-    height: 50%;
+    width: 130%;
+    height: 100%;
 }
-
 
 .fun-fact {
     width: 200px;
     height: 3rem;
     justify-content: center;
     align-items: center;
-    border-radius: 8px;
     transition: all 0.8s ease-in-out;
-    font-size: 1.5rem;
     font-weight: 600;
-    border:2px solid #97aac3;
-    color: black; 
+    /* border:2px solid #97aac3; */
+    color: black;
 }
 
 
 .fun-fact:hover {
-    transform: scale(1.2);
+    transform: scale(2);
     cursor: pointer;
-    color: #FFD35C;
+    color: #3737eb;
 }
 
-/* SCROLL DOWN BUTTON */
+/* SCROLL DOWN & UP BUTTON */
 
-.scroll-down {
-    height: 20vh;
-    grid-area: scroll;
-    align-items: center;
-    justify-content: center;
-    font-size: 2rem;   
-}
+.wrapper {
+    position: fixed;
+    top: 80vh;
+    left: 10px;
+  }
+
+
+.wrapper-2 {
+    position: fixed;
+    top: 80vh;
+    right: 10px;
+  }
+
+.arrow2 {
+    animation: slide2 1s ease-in-out infinite;
+    color:#FFD35C;
+  }
+
+  @keyframes slide2 {
+    0%,
+    100% {
+      transform: translate(0, 0) rotate(90deg);
+    }
+
+    50% {
+      transform: translate(0px, 10px) rotate(90deg);
+    }
+  }
+
+.vertical-text {
+    writing-mode:vertical-rl;
+    color: #98AAC4;
+    font-size: 1.3rem;
+  }
+
+
 
 /* SECTION */
+
 section {
     width: 100%;
     /* width: 100vw; */
@@ -192,39 +326,15 @@ section {
     grid-template-columns: 2fr 2fr 2fr;
     grid-template-rows: 0.5fr 5fr;
     grid-template-areas:
-    "h2 h2 h2 h2" 
+    "h2 h2 h2 h2"
     ". image image image";
     gap: 2rem;
-    margin: 10% 0;
+    margin-top: 24vh;
 }
 
-/* aside {
-    grid-area: aside;
-    height: 60%;
-    text-transform: uppercase;
-    clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);
-    background-color: #FFD35C;
-    line-height: 200%;
-    padding: 1% 5% 1% 2%;
-    border-radius: 8px;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    margin-left: 1%;
-} */
-
-.h2 {
+.title-projects {
     grid-area: h2;
     text-align: center;
-    
-}
-
-
-aside h2 {
-    background-color: #FFD35C;
-    color: #98AAC4;
-    text-shadow: 0px 0px 6px rgba(255, 255, 255, 0.7);
-    font-size: 2rem;
 }
 
 section img {
@@ -232,27 +342,6 @@ section img {
     width: 100%;
     height: 100%;
     border-radius: 20px;
-    opacity: 0.3;
-    transition: all 0.5s ease-in-out;
-}
-
-section img:hover {
-    opacity: 1;
-}
-
-section .project-1,
-section .project-2,
-section .project-3 {
-    /* width: 30%; */
-    height: 70%;
-    box-shadow: 
-    12px 12px 16px 0 rgba(0, 0, 0, 0.25),
-    -8px -8px 12px 0 rgba(255, 255, 255, 0.3);
-    border-radius: 20px;
-}
-
-section div:hover {
-    transform: scale(0.9);transition: all 1s ease-in-out;
 }
 
 /* FOOTER */
@@ -287,6 +376,378 @@ a:hover {
     text-decoration: none;
 }
 
-a {
+a,
+a:hover {
     color: #98AAC4;
 }
+
+
+
+
+/* FLIP CARDS */
+
+.flip-card {
+    background-color: transparent;
+    perspective: 1000px;
+  }
+
+.flip-card img,
+.flip-card-back {
+    border-radius: 20px;
+}
+
+.flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    box-shadow:
+    12px 12px 16px 0 rgba(0, 0, 0, 0.25),
+    -8px -8px 12px 0 rgba(255, 255, 255, 0.3);
+    border-radius: 20px;
+  }
+
+.flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+  }
+
+.flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+  }
+
+.flip-card-front {
+    background-color: transparent;
+  }
+
+.flip-card-back {
+    background-color:  #98AAC4;
+    transform: rotateY(180deg);
+
+  }
+
+.flip-card-back a h3 {
+    font-size: 2.1rem;
+    color: white;
+  }
+
+.flip-card-back p {
+    font-size: 1.5rem;
+    color: black;
+  }
+
+.flip-card-back p:nth-child(3) {
+    font-size: 1rem;
+}
+
+.flip-card-back p:nth-child(4) {
+    color: #FFD35C;
+    text-transform: uppercase;
+    font-size: 1.5rem;
+}
+
+/* SECTION 2 */
+
+.section2 {
+    grid-area: section2;
+    height: 25vh;
+}
+
+.section2 h2 {
+    text-align: center;
+}
+
+.section2 a {
+    text-decoration: none;
+    color: black;
+}
+
+table {
+    margin-left: 10%;
+}
+
+th, td,
+tbody {
+    display: inline-block;
+}
+
+th {
+    color: #98AAC4; 
+}
+
+
+/* loading table */
+.bg {
+    background-color: #fff;
+    width: 400px;
+    height: 30px;
+    margin: 0 auto;
+  }
+  
+  .left {
+    float: left;
+  }
+  
+  .right {
+    float: right;
+  }
+  
+  .load {
+    background: -webkit-linear-gradient(
+      135deg,
+      #FFD35C 25%, #ffe396 25%,
+          #ffe396 50%, #FFD35C 50%,
+          #FFD35C 75%, #ffe396 75%
+    );
+    
+    background: -moz-linear-gradient(#ffe396
+      135deg,
+      #FFD35C 25%, #ffe396 25%,
+          #ffe396 50%, #FFD35C 50%,
+          #FFD35C 75%, #ffe396 75%
+    );
+    
+    background: -o-linear-gradient(
+      135deg,
+      #FFD35C 25%, #ffe396 25%,
+          #ffe396 50%, #FFD35C 50%,
+          #FFD35C 75%, #ffe396 75%
+    );
+    
+    width: 50%;
+    height: 30px;
+    line-height: 30px;
+    color: #fff;
+    background-size: 50px 50px;
+    
+    -webkit-animation: bar-animation 3s linear infinite;
+  
+  }
+  
+  
+  @-webkit-keyframes bar-animation {
+    0% {
+      background-position: 0 0;
+    }
+    100% {
+      background-position: 20px 20px;
+    }
+  }
+
+.html,
+.css,
+.js,
+.sass,
+.bootstrap {
+    margin-left: 10%;
+}
+.css {
+    width: 60%;
+}
+
+.js {
+    width: 5%;
+}
+
+.sass {
+    width: 15%;
+}
+
+.bootstrap {
+    width: 25%;
+}
+
+/* list soft skills  */
+
+.soft-skills {
+    list-style: none;
+    font-size: 1.5rem;
+}
+
+.section2 h3 {
+    color: #3737eb;
+    font-weight: bold;
+}
+
+.soft-skills > li::before {
+    content:"\f105";
+    font-family: fontAwesome;
+}
+
+.hard-skills {
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+.hard-skills span {
+    color:#FFD35C;
+}
+
+/* MOBILE - TABLET- SECTION */
+
+/* DESKTOP BIG */
+@media screen and (min-width:894px) {
+    }
+    
+        nav ul li a:after {
+        position: absolute;
+        content: "";
+        left: 0;
+        bottom: -10px;
+        width: 0;
+        height: 30%;
+        background:#FFD35C;
+        opacity: 0.5;
+        transition: all .5s ease-in-out;
+      }
+    
+        nav ul li a:hover:after {
+        width: 100%;
+        }
+
+    }
+
+
+@media (min-width: 1024px) {
+    .projects-img-container {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
+
+    .flip-card {
+    width: 10vw;
+    height: 20vh;
+    }   
+}
+
+/* DESKTOP smaller */
+
+@media (min-width: 800px) {
+    .projects-img-container {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
+
+    .flip-card {
+    width: 25vw;
+    height: 38vh;
+    }   
+}
+
+/* MOBILE */
+
+@media screen and (max-width:892px) {
+    h1 {
+        font-size: 10vw;
+    }
+    
+    h2 {
+        font-size: 8vw;
+    }
+    
+    h3 {
+        font-size: 6vw;
+    }
+    
+    p {
+        font-size: 4vw;
+    }
+
+    h1, h2, h3, p {
+        text-align: center;
+    }
+    
+    nav {
+        width: 90vw;
+        margin-left: 10%;
+    }
+
+    nav ul {
+        width: 90vw;
+        height: 100%;
+    }
+
+    main {
+        position: relative;
+    }
+
+    .presentation {
+        position: relative;
+        top: 30vh;
+    }
+
+    section {
+        position: relative;
+        top: 15vh;
+    }
+
+    footer {
+        position: relative;
+        bottom: -230vh;
+    }
+
+
+    header ul {
+      background-image: url(/images/portfolio-3.png);
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: 90%;
+    }
+
+    header li {
+        -webkit-box-shadow: 0 6px 4px -4px #98AAC4;
+        -moz-box-shadow: 0 6px 4px -4px #98AAC4;
+        box-shadow: 0 4px 8px -4px #98AAC4;
+        width: 65%;
+    }
+
+    .photo-presentation {
+      display: none;
+    }
+
+    .wrapper,
+    .wrapper-2 {
+        display: none;
+    }
+
+    .projects-img-container {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+}
+    .flip-card {
+    width: 65vw;
+    height: 60vh;
+    }   
+
+    .flip-card-inner {
+        transition: transform 0.6s 1s;
+    }
+
+    .container-1 {
+        position: relative;
+
+    }
+    .section2 {
+        position: relative;
+        top: 1400px;
+        right: 50px;
+
+    }
+
+    .soft-skills,
+    table {
+        text-align: center;
+    }
+    .skills {
+        flex-direction: column;
+    }
+}
+
